update criacao tela de busca e troca de livros

--- a/src/app/components/authentication/sign-in-form/sign-in-form.component.html
+++ b/src/app/components/authentication/sign-in-form/sign-in-form.component.html
@@ -68,18 +68,17 @@
     </div>
   </div>
 
-  <div class="d-flex justify-content-around">
+  <!-- <div class="d-flex justify-content-around">
     <div>
-      <!-- Forgot password -->
       <a href="">Esqueceu sua senha?</a>
     </div>
-  </div>
+  </div> -->
 
   <!-- Sign in button -->
   <button
     [disabled]='signInForm.invalid'
     mdbBtn
-    color="info"
+    color="success"
     block="true"
     class="my-4"
     (click)="signIn()"
