--- a/src/app/components/logged-area/dashboard/dashboard.component.html
+++ b/src/app/components/logged-area/dashboard/dashboard.component.html
@@ -1,42 +1,10 @@
-<div class="dashboard d-flex row">
-  <div class="content-1 col d-flex flex-column justify-content-around">
-    <div class="card bg-warning text-white">
-      <div class="card-header">
-        Nova mensagem
-      </div>
-      <div class="card-body">
-        <h5 class="card-title ">Enzo Gabriel da Silva</h5>
-        <p class="card-text">Olá, vi que você possui o livro O Apanhador no Campo de Centeio...</p>
-        <a href="#" class="btn text-white btn-warning">Visualizar conversa</a>
-      </div>
-    </div>
-    <div class="card bg-secondary text-white">
-      <div class="card-header">
-        Atualização na troca
-      </div>
-      <div class="card-body">
-        <h5 class="card-title">Enzo Gabriel da Silva</h5>
-        <p class="card-text">Enzo Gabriel da Silva demonstrou interesse em trocar livros com você</p>
-        <a href="#" class="btn btn-secondary">Visualizar conversa</a>
-      </div>
-    </div>
-    <div class="card bg-primary text-white">
-      <div class="card-header">
-        Aviso
-      </div>
-      <div class="card-body ">
-        <h5 class="card-title">Encontre leitores próximos a você</h5>
-        <p class="card-text">Com o Cult Network você consegue encontrar leitores próximos a você também interessados em trocar seus livros</p>
-      </div>
-    </div>
+<div class="dashboard d-flex flex-column justify-content-center align-items-center">
+  <div class="cult-network-logo">
+    <span class="logo-title">
+      Cult Network<span class="logo-dot">.</span>
+    </span>
   </div>
-  <div class="content-2 col d-flex flex-column justify-content-center">
-    <div class="jumbotron">
-      <h1 class="display-4">Troque um livro hoje!</h1>
-      <p class="lead">O simples ato de trocar um livro com outra pessoa pode trazer benefícios imensuráveis a sociedade. Quando você troca um livro, você está também dando uma nova oportunidade de aprendizado a alguém</p>
-      <p class="lead">
-        <a class="btn btn-secondary btn-lg" href="#" role="button">Quero encontrar outros leitores!</a>
-      </p>
-    </div>
+  <div class="description">
+    Bem-vindo de volta! Utilize o menu lateral para acessar as funcionalidades da plataforma.
   </div>
 </div>
