--- a/src/app/components/logged-area/report/report.component.html
+++ b/src/app/components/logged-area/report/report.component.html
@@ -5,7 +5,7 @@
 
       <p class="text-center mb-4">
         Durante a utilização da plataforma, caso você tenha notado que algum
-        usuário se comportou de maneira inadequada, não exite! Utilize esse
+        usuário se comportou de maneira inadequada, não hesite! Utilize esse
         canal para efetuar a sua denúncia e eventualmente entraremos em contato
         buscando solucionar a questão
       </p>
@@ -13,7 +13,7 @@
       <!-- Email denunciado -->
       <div class="form-row mb-4">
         <input
-          type="text"
+          type="email"
           formControlName="reportedEmail"
           id="defaultRegisterFormreportedEmail"
           aria-describedby="defaultRegisterFormreportedEmailHelpBlock"
