--- a/src/app/components/authentication/authentication.component.scss
+++ b/src/app/components/authentication/authentication.component.scss
@@ -1,17 +1,28 @@
-.carousel{
+.carousel {
   position: absolute;
+  height: 150vh;
+  slide {
+    border: 1px solid black;
+    height: 150vh;
+    img {
+      display: block;
+      width: 100%;
+      height: 150vh;
+      background-size: cover;
+    }
+  }
 }
 
-.authentication-container{
-  position: relative
+.authentication-container {
+  position: relative;
 }
 
-.authentication-form-container{
+.authentication-form-container {
   min-height: 432px;
-  max-width: 450px;
+  max-width: 600px;
   margin: auto;
-  background: rgba(255,255,255,0.9);
-  box-shadow: 0px 0px 20px 0px rgba(170,170,170,1);
+  background: rgba(255, 255, 255, 0.9);
+  box-shadow: 0px 0px 20px 0px rgba(170, 170, 170, 1);
   position: relative;
   top: 100px;
   width: 90vw;
