--- a/src/app/components/logged-area/my-profile/my-profile.component.html
+++ b/src/app/components/logged-area/my-profile/my-profile.component.html
@@ -228,7 +228,7 @@
     <div class="col">
       <button
         (click)="updateUserData()"
-        [disabled]="!updateProfileForm.valid && !this.editMode"
+        [disabled]="!updateProfileForm.valid || !this.editMode"
         mdbBtn
         color="success"
         block="true"
