--- a/src/app/components/logged-area/my-profile/my-profile.component.html
+++ b/src/app/components/logged-area/my-profile/my-profile.component.html
@@ -6,7 +6,7 @@
   <p class="h4 mb-4">Perfil pessoal</p>
 
   <p class="text-center mb-4">
-    Clique no botão "Alterar dados" para fazer alterações
+    Clique no botão "Atualizar dados" para fazer alterações
   </p>
 
   <!-- Nome -->
